# pyload-tui

./: Cargo.toml  README.md  cog.toml  generate-pyload-sdk
.github/workflows/: release.yaml  tag.yaml
src/: app.rs  app_action.rs  current_screen.rs  downloads_screen.rs  files_screen.rs  key_hints.rs  lib.rs  main.rs  packages_screen.rs  screens.rs  status_bar.rs  status_card.rs  table.rs  utils.rs
src/add_package_form/: add_package_form.rs  mod.rs  selected_input.rs  widget.rs
src/append_files_form/: append_files_form.rs  mod.rs  selected_input.rs  widget.rs
