[package]
name = "pyload-tui"
version = "0.40.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
ratatui-textarea = "0.9.1"
tokio = { version = "1.52.2", features = ["full"] }
tui-checkbox = "0.4.4"
serde_json = "1"
dirs = "6.0.0"
kdl = "6.5.0"
enum_dispatch = "0.3"
openapi = { git = "https://github.com/rodrigo-sys/pyload-rust-sdk" }
